arc: Reset kiosk state when ARC session is closed/restarted.

When ARC session is restarted or closed, OnTaskDestroyed()
callback is not necessary send for all apps. Because of that
ArcKioskAppService continued to think that kiosk app is still running,
while it's not true.
Perfectly, instead of |if (!app_launcher_)| check in line 193,
it should check whether kiosk app is already running (and update taskid)
but there is no such function, so just re-setting internal state
on restart/close should work too.

BUG=830640

Change-Id: I8097e03000d0d9e21b672672cddaf3a91a1d3214
Reviewed-on: https://chromium-review.googlesource.com/1000455
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Commit-Queue: Sergey Poromov <poromov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549280}
Former-commit-id: 9dd91389e9807b53ddbf5ebe60d476448f113840